--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
