--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <script
+      defer
+      src="https://www.paypal.com/sdk/js?client-id=AQHMoAUxJYAyff6yLpGfXCKoYAYI8aSFpxlIQFJr1h0avqjrHKEL3nVNSQtlWWBLRFRxq3gf_aGdvRYD"
+    ></script>
+
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
