feat: paypal checkout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Ultra Movie Store</title>
+    <title>Ultra Movie Shop</title>
   </head>
 
   <body>
